[package]
name = "nih_plug_egui"
version = "0.0.0"
edition = "2021"
authors = ["Robbert van der Helm <mail@robbertvanderhelm.nl>"]
license = "ISC"

description = "An adapter to use egui GUIs with NIH-plug"

[features]
default = ["opengl", "default_fonts"]
# `nih_plug_egui` always uses OpenGL since egui's wgpu backend is still unstable
# depending on the platform
opengl = ["egui-baseview/opengl"]
default_fonts = ["egui-baseview/default_fonts"]
rayon = ["egui-baseview/rayon"]

[dependencies]
nih_plug = { path = "..", default-features = false }
raw-window-handle = "0.5"
baseview = { git = "https://github.com/RustAudio/baseview.git", rev = "579130ecb4f9f315ae52190af42f0ea46aeaa4a2" }
crossbeam = "0.8"
egui-baseview = { git = "https://github.com/BillyDM/egui-baseview.git", rev = "4e81e0a26b398385ea448ce7c8699574f20647ff", default-features = false, features = [ "windows_keyboard_workaround" ] }
parking_lot = "0.12"
# To make the state persistable
serde = { version = "1.0", features = ["derive"] }
